--- a/templete/index.html
+++ b/templete/index.html
@@ -1,66 +1,48 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <!-- Meta tags -->
-  <meta charset="utf-8" />
-  <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
-  <meta content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0" name="viewport" />
-  <meta name="viewport" content="width=device-width" />
+    <head>
+        <!-- Meta tags -->
+        <meta charset="utf-8" />
+        <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
+        <meta content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0" name="viewport" />
+        <meta name="keywords" content="keywords here" />
+        <meta name="description" content="description here" />
+        <meta name="author" content="RudRecciah" />
+        <!-- Favicon and title -->
+        <link rel="icon" href="path/to/fav.png">
+        <title>Templete</title>
+        <!-- Halfmoon CSS -->
+        <link href="https://cdn.jsdelivr.net/npm/halfmoon@1.1.1/css/halfmoon-variables.min.css" rel="stylesheet" />
+    </head>
+    <body class="with-custom-webkit-scrollbars with-custom-css-scrollbars dark-mode" data-dm-shortcut-enabled="true" data-sidebar-shortcut-enabled="true">
+        <!-- Modals go here -->
+        <div class="page-wrapper with-navbar with-sidebar" data-sidebar-type="overlayed-all">
+            <div class="sticky-alerts">
 
-  <!-- Favicon and title -->
-  <link rel="icon" href="path/to/fav.png">
-  <title>Starter template - Halfmoon</title>
+            </div>
+            <nav class="navbar">
+                <div class="navbar-content">
+                    <button id="toggle-sidebar-btn" class="btn btn-action" type="button" onclick="halfmoon.toggleSidebar()">
+                        <i class="fa fa-bars" aria-hidden="true">
+                        </i>
+                    </button>
+                </div>
+            </nav>
+            <div class="sidebar-overlay" onclick="halfmoon.toggleSidebar()"></div>
+            <div class="sidebar">
+                <a href="home link here">
+                    <!--logo here-->
+                </a>
+                <!--navigation here-->
+            </div>
+            <div class="content-wrapper">
 
-  <!-- Halfmoon CSS -->
-  <link href="https://cdn.jsdelivr.net/npm/halfmoon@1.1.1/css/halfmoon-variables.min.css" rel="stylesheet" />
-  <!--
-    Or,
-    Use the following (no variables, supports IE11):
-    <link href="https://cdn.jsdelivr.net/npm/halfmoon@1.1.1/css/halfmoon.min.css" rel="stylesheet" />
-    Learn more: https://www.gethalfmoon.com/docs/customize/#notes-on-browser-compatibility
-  -->
-</head>
-<body class="with-custom-webkit-scrollbars with-custom-css-scrollbars" data-dm-shortcut-enabled="true" data-sidebar-shortcut-enabled="true" data-set-preferred-mode-onload="true">
-  <!-- Modals go here -->
-  <!-- Reference: https://www.gethalfmoon.com/docs/modal -->
-
-  <!-- Page wrapper start -->
-  <div class="page-wrapper with-navbar with-sidebar" data-sidebar-type="overlayed-all">
-
-    <!-- Sticky alerts (toasts), empty container -->
-    <!-- Reference: https://www.gethalfmoon.com/docs/sticky-alerts-toasts -->
-    <div class="sticky-alerts"></div>
-
-    <!-- Navbar start -->
-    <nav class="navbar">
-      <!-- Reference: https://www.gethalfmoon.com/docs/navbar -->
-    </nav>
-    <!-- Navbar end -->
-
-    <!-- Sidebar overlay -->
-    <div class="sidebar-overlay" onclick="halfmoon.toggleSidebar()"></div>
-
-    <!-- Sidebar start -->
-    <div class="sidebar">
-      <!-- Reference: https://www.gethalfmoon.com/docs/sidebar -->
-    </div>
-    <!-- Sidebar end -->
-
-    <!-- Content wrapper start -->
-    <div class="content-wrapper">
-      <!--
-        Add your page's main content here
-        Examples:
-        1. https://www.gethalfmoon.com/docs/content-and-cards/#building-a-page
-        2. https://www.gethalfmoon.com/docs/grid-system/#building-a-dashboard
-      -->
-    </div>
-    <!-- Content wrapper end -->
-
-  </div>
-  <!-- Page wrapper end -->
-
-  <!-- Halfmoon JS -->
-  <script src="https://cdn.jsdelivr.net/npm/halfmoon@1.1.1/js/halfmoon.min.js"></script>
-</body>
+            </div>
+        </div>
+        <!-- Halfmoon JS -->
+        <script src="https://cdn.jsdelivr.net/npm/halfmoon@1.1.1/js/halfmoon.min.js"></script>
+        <script src="https://kit.fontawesome.com/d1e8146998.js" crossorigin="anonymous"></script>
+    </body>
 </html>
+
+<i class="fas fa-paper-plane"></i>
