--- a/index.html
+++ b/index.html
@@ -1,18 +1,230 @@
-<html>
+<!DOCTYPE html>
+<html lang="en">
     <head>
-        <title>
-            Indev!
-        </title>
+        <!-- Meta tags -->
+        <meta charset="utf-8" />
+        <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
+        <meta content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0" name="viewport" />
+        <meta name="keywords" content="rudrecciah, endcraft, freebird games, rud recciah, rud, recciah" />
+        <meta name="description" content="Home of the squacky boi." />
+        <meta name="author" content="RudRecciah" />
+        <!-- Favicon and title -->
+        <link rel="icon" href="favicon.png">
+        <title>RudRecciah</title>
+        <!-- CSS -->
+        <link href="https://cdn.jsdelivr.net/npm/halfmoon@1.1.1/css/halfmoon-variables.min.css" rel="stylesheet" />
+        <link href="./style.css" rel="stylesheet" />
     </head>
-    <body>
-        <h1>
-            Site in development, check back later.
-        </h1>
-        <p>
-            Maybe you meant to go to <a href="./ttm/">rudrecciah.dev/ttm/</a>?
-        </p>
-        <p>
-            Contact me on Discord:<br>@RudRecciah#5681 (id=246080207704817664)
-        </p>
+    <body class="with-custom-webkit-scrollbars with-custom-css-scrollbars dark-mode rud-nomargin    " data-dm-shortcut-enabled="true" data-sidebar-shortcut-enabled="true">
+        <!-- Modals go here -->
+        <div class="page-wrapper with-navbar with-sidebar" data-sidebar-type="overlayed-all">
+            <div class="sticky-alerts">
+
+            </div>
+
+
+
+            <nav class="navbar">
+                <div class="navbar-content rud-width-fluid rud-height-fluid">
+                    <button class="btn btn-action btn-link" type="button" onclick="halfmoon.toggleSidebar()">
+                        <i class="fa fa-bars rud-nav-item-color" aria-hidden="true"></i>
+                    </button>
+                    <a href="./" class="rud-width-fluid btn btn-link"><span class="rud-nav-item-color rud-text-logo font-size-24">&lt;/RudRecciah&gt;</span>
+                    </a>
+                    <a href="./contact/">
+                        <button class="btn btn-action btn-link" type="button">
+                            <i class="fas fa-paper-plane rud-nav-item-color" aria-hidden="true"></i>
+                        </button>
+                    </a>
+                </div>
+            </nav>
+
+
+
+            <div class="sidebar-overlay" onclick="halfmoon.toggleSidebar()"></div>
+            <div class="sidebar">
+                <div class="sidebar-menu">
+                    <div class="sidebar-brand ml-5 font-size-24">
+                        <a href="./" class="sidebar-brand rud-text-logo">&lt;/RudRecciah&gt;</a>
+                    </div>
+                    <div class="sidebar-content ml-5">
+                        <h1 class="sidebar-title">
+                            Information
+                        </h1>
+                        <div class="sidebar-divider"></div>
+                        <a href="./" class="sidebar-link active">Home</a>
+                        <a href="./about" class="sidebar-link">About</a>
+                        <a href="./contact" class="sidebar-link">Contact</a>
+                        <details class="sidebar-link">
+                            <summary class="rud-no-outline">
+                              Accounts
+                            </summary>
+                            <div class="sidebar-divider"></div>
+                            <div class="sidebar-content mt-0 mb-0 ml-0">
+                                <a target="_blank" href="https://github.com/RudRecciah" class="sidebar-link">GitHub</a>
+                                <a target="_blank" href="https://steamcommunity.com/id/rudrecciah/" class="sidebar-link">Steam</a>
+                                <a target="_blank" href="https://www.youtube.com/channel/UCi8agiUPQKPmcx1lU_QzG0Q" class="sidebar-link">Youtube</a>
+                                <a target="_blank" href="https://www.twitch.tv/rudrecciah" class="sidebar-link">Twitch</a>
+                                <a target="_blank" href="https://twitter.com/RRecciah" class="sidebar-link">Twitter</a>
+                                <a target="_blank" href="https://www.reddit.com/user/RudRecciah" class="sidebar-link">Reddit</a>
+                            </div>
+                        </details>
+                        <div class="rud-spacer-sm"></div>
+                        <h1 class="sidebar-title">
+                            Projects
+                        </h1>
+                        <div class="sidebar-divider"></div>
+                        <a href="./endcraft/" class="sidebar-link">EndCraft</a>
+                        <a href="./freebirdsmp/" class="sidebar-link">Freebird SMP</a>
+                        <a href="./ttm/" class="sidebar-link">TTM Theory Wiki</a>
+                        <!-- PROJECT SIDEBAR LINK 
+                        <a href="./ttm/" class="sidebar-link">TTM Theory Wiki</a>
+                        -->
+                        <div class="rud-spacer-sm"></div>
+                        <h1 class="sidebar-title">
+                            Bugs
+                        </h1>
+                        <div class="sidebar-divider"></div>
+                        <a href="./bugs" class="sidebar-link">Report A Bug</a>
+                    </div>
+                </div>
+                <!--navigation here-->
+            </div>
+
+
+
+            <div class="content-wrapper">
+                <div class="container-fluid">
+                    <img src="landing-bg-img.png" class="img-fluid rud-img-width-fluid" alt="image did a not exist sorry :/">
+                </div>
+                <div class="content">
+                    <h1 class="content-title text-center font-size-24">
+                        Hey
+                    </h1>
+                    <p class="text-center">
+                        I'm a developer who does things.
+                    </p>
+                    <div class="text-center">
+                        <a href="./about/" class="btn btn-primary btn-rounded">All The Info</a>
+                    </div>
+                    <div class="rud-spacer-sm"></div>
+                    <hr>
+                    <h1 class="content-title text-center font-size-24">
+                        Projects
+                    </h1>
+                    <p class="text-center">
+                        Looking for some of my projects? Here are my favorites.
+                    </p>
+                    <div class="container-lg">
+                        <div class="row">
+                            <div class="col-sm">
+                                <div class="card p-0">
+                                    <img src="ecl.png" class="img-fluid rounded-top" alt="reload page pls">
+                                    <div class="content">
+                                        <div class="rud-card-sub-height">
+                                            <div class="content-title">
+                                                EndCraft
+                                            </div>
+                                            <div class="text-muted">
+                                                EndCraft, my longest-running and longest-indev project, is a Minecraft server with fun minigames, survival, and PVP.
+                                            </div>
+                                            <div class="rud-spacer-sm"></div>
+                                        </div>
+                                        <div class="text-right">
+                                            <a href="./endcraft/" class="btn btn-primary btn-rounded">Learn more</a>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-sm">
+                                <div class="card p-0">
+                                    <img src="fbl.png" class="img-fluid rounded-top" alt="reload page pls">
+                                    <div class="content">
+                                        <div class="rud-card-sub-height">
+                                            <div class="content-title">
+                                                Freebird SMP
+                                            </div>
+                                            <div class="text-muted">
+                                                A small, invite-only RP Minecraft server made for <a href="https://discord.com/invite/MDxRZCx">this Discord server</a>.
+                                            </div>
+                                            <div class="rud-spacer-sm"></div>
+                                        </div>
+                                        <div class="text-right">
+                                            <a href="./freebirdsmp/" class="btn btn-primary btn-rounded">Learn more</a>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-sm">
+                                <div class="card p-0">
+                                    <img src="ttmtwl.png" class="img-fluid rounded-top" alt="reload page pls">
+                                    <div class="content">
+                                        <div class="rud-card-sub-height">
+                                            <div class="content-title">
+                                                TTM Theory Wiki
+                                            </div>
+                                            <div class="text-muted">
+                                                The officially unofficial place to find lore, theories, and headcanon about games made by <a href="https://freebirdgames.com/">this indie studio</a>.
+                                            </div>
+                                            <div class="rud-spacer-sm"></div>
+                                        </div>
+                                        <div class="text-right">
+                                            <a href="./ttm/" class="btn btn-primary btn-rounded">Learn more</a>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <p class="text-center">
+                        Looking for another project? Find it here.
+                    </p>
+                    <div class="text-center">
+                        <button type="button" onclick="halfmoon.toggleSidebar()" class="btn btn-primary btn-rounded">All Projects</button>
+                    </div>
+                    <div class="rud-spacer-sm"></div>
+                    <hr>
+                    <h1 class="content-title text-center font-size-24">
+                        Contact
+                    </h1>
+                    <p class="text-center">
+                        If you need to get in touch, you can find everything you need to know here.
+                    </p>
+                    <div class="text-center">
+                        <a href="./contact/" class="btn btn-primary btn-rounded">Contact Me</a>
+                    </div>
+                    <div class="rud-spacer-sm"></div>
+                    <hr>
+                    <h1 class="content-title text-center font-size-24">
+                        Accounts
+                    </h1>
+                    <p class="text-center">
+                        Looking for my GitHub, Steam, or social media accounts? Find them here.
+                    </p>
+                    <div class="text-center">
+                        <div class="btn-group" role="group" aria-label="Accounts">
+                            <a target="_blank" href="https://github.com/RudRecciah" class="btn btn-primary btn-rounded"><i class="fab fa-github"></i></a>
+                            <a target="_blank" href="https://steamcommunity.com/id/rudrecciah/" class="btn btn-primary"><i class="fab fa-steam"></i></a>
+                            <a target="_blank" href="https://www.youtube.com/channel/UCi8agiUPQKPmcx1lU_QzG0Q" class="btn btn-primary"><i class="fab fa-youtube"></i></a>
+                            <a target="_blank" href="https://www.twitch.tv/rudrecciah" class="btn btn-primary"><i class="fab fa-twitch"></i></a>
+                            <a target="_blank" href="https://twitter.com/RRecciah" class="btn btn-primary"><i class="fab fa-twitter"></i></a>
+                            <a target="_blank" href="https://www.reddit.com/user/RudRecciah" class="btn btn-primary btn-rounded"><i class="fab fa-reddit"></i></a>
+                        </div>
+                    </div>
+                </div>
+                <div class="navbar navbar-static-bottom">
+                    <span class="navbar-text m-auto">
+                        Made by RudRecciah at 4:23 AM
+                    </span>
+                </div>
+            </div>
+        </div>
+        <!-- Halfmoon JS -->
+        <script src="https://cdn.jsdelivr.net/npm/halfmoon@1.1.1/js/halfmoon.min.js"></script>
+        <script src="https://kit.fontawesome.com/d1e8146998.js" crossorigin="anonymous"></script>
+        <script>
+            console.log("Maybe you should be looking somewhere else...")
+            console.log("I heard there's a place where you can see it all.")
+        </script>
     </body>
 </html>
